Added basic feature notes and started analysis of missing values

--- a/titanic_eda.ipynb
+++ b/titanic_eda.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "Common steps in EDAs:\n",
     "- <u>Dataset shape:</u> number of tables, rows, colums, date types, size in bytes.\n",
-    "- <u>Definition of features:</u> meaning of the features\n",
+    "- <u>Definition of features:</u> meaning of the features and notes about them.\n",
     "- <u>Data model:</u> relationship betwen tables (if the dataeset contains more than one table)\n",
-    "- <u>Analysis of missing values:</u> number of features with missing values and number of missing values per feature.\n",
+    "- <u>Analysis of missing values:</u> number of features with missing values, missing values percentage, number of features with missing values, number of rows with missing values, number of missing values per feature, average missing values per row, average missing values per column, etcetera.\n",
     "- <u>Measures of central tendency:</u> mean, median, mode.\n",
     "- <u>Measures of spread:</u> variance, standard deviation, skewness, kurtosis\n",
     "- <u>Distributions:</u> distributions of the data, quantiles, histograms, probability distributions.\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -361,12 +361,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are missing values in three of the eleven features: age, cabin and embarked"
+    "- There are eleven features of which four are integers (survied, pclass, sibsp and parch), two are floats (age and fare), and five are strings (name,sex,ticket,cabin and embarked)\n",
+    "\n",
+    "- There are missing values in three of the eleven features: age, cabin and embarked."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -416,10 +418,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Smart, Mr. John Montgomery</td>\n",
+       "      <td>Lester, Mr. James</td>\n",
        "      <td>male</td>\n",
-       "      <td>1601</td>\n",
-       "      <td>G6</td>\n",
+       "      <td>347082</td>\n",
+       "      <td>C23 C25 C27</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -435,14 +437,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                              Name   Sex Ticket Cabin Embarked\n",
-       "count                          891   891    891   204      889\n",
-       "unique                         891     2    681   147        3\n",
-       "top     Smart, Mr. John Montgomery  male   1601    G6        S\n",
-       "freq                             1   577      7     4      644"
+       "                     Name   Sex  Ticket        Cabin Embarked\n",
+       "count                 891   891     891          204      889\n",
+       "unique                891     2     681          147        3\n",
+       "top     Lester, Mr. James  male  347082  C23 C25 C27        S\n",
+       "freq                    1   577       7            4      644"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,10 +457,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Features definition\n",
+    "## Features definition\n",
     "\n",
     "- Survived: Survival. 0:False, 1:True\n",
-    "- Pclass: ticket class (lower means more expensive)\n",
+    "- Pclass: ticket class (lower means more expensive) 1:1st, 2:2nd, 3:3rd\n",
     "- Name: name of the passenger\n",
     "- Sex: sex of the passenger\n",
     "- Age: age of the passenger in years\n",
@@ -467,7 +469,121 @@
     "- Ticket: ticket number\n",
     "- Fare: passenger fare\n",
     "- Cabin: cabin number\n",
-    "- Embarked: port of embarktion"
+    "- Embarked: port of embarktion. C:Cherbourg, Q:Queenstown, S:Southampton\n",
+    "\n",
+    "### Features notes\n",
+    "\n",
+    "- **Pclass** a proxy for socio-economic status (SES): 1st:Upper; 2nd:Middle; 3rd:Lower\n",
+    "- **Age** is fractional if less than 1. If the age is estimated, is it in the form of xx.5\n",
+    "- **Sibsp**, the dataset defines family relations in this way. Sibling includes brother, sister, stepbrother, stepsister; and spouse, husband, wife (mistresses and fiancés were ignored).\n",
+    "- **Parch**, the dataset defines family relations in this way. Parent means mother, father and child means daughter, son, stepdaughter, stepson. Some children travelled only with a nanny, therefore parch equals 0 for them.\n",
+    "- **Name** includes name, surname and titles such as Mr., Mrs., Ms., and Miss. American English uses the dot after the title whereas British English does not. The titles in the time of the Titanic (1912) in the US meant:\n",
+    "    - **Mr.**, mister, which was used for an adult men. Regardless of wheter the person is married or not.\n",
+    "    - **Miss**, young unmarried women.\n",
+    "    - **Mrs.**, usually married women.\n",
+    "    - **Ms.** meant women in general."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis of missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Survived      0\n",
+       "Pclass        0\n",
+       "Name          0\n",
+       "Sex           0\n",
+       "Age         177\n",
+       "SibSp         0\n",
+       "Parch         0\n",
+       "Ticket        0\n",
+       "Fare          0\n",
+       "Cabin       687\n",
+       "Embarked      2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_values = df.isnull().sum()\n",
+    "missing_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Survived     0.000000\n",
+       "Pclass       0.000000\n",
+       "Name         0.000000\n",
+       "Sex          0.000000\n",
+       "Age         19.865320\n",
+       "SibSp        0.000000\n",
+       "Parch        0.000000\n",
+       "Ticket       0.000000\n",
+       "Fare         0.000000\n",
+       "Cabin       77.104377\n",
+       "Embarked     0.224467\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_values_percentage = 100*missing_values/nrows\n",
+    "missing_values_percentage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are missing values in three features out of the eleven:\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <th>Feature</th>\n",
+    "    <th>Missing values</th>\n",
+    "    <th>Percentage missing</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Age</td>\n",
+    "    <td>177</td>\n",
+    "    <td>19.87%</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Cabin</td>\n",
+    "    <td>687</td>\n",
+    "    <td>77.10%</td>\n",
+    "  </tr>\n",
+    "    <tr>\n",
+    "    <td>Embarked</td>\n",
+    "    <td>2</td>\n",
+    "    <td>0.22%</td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "Why are there missing values in those features? There are only two missing values in the Embarked features, maybe stowaways?"
    ]
   },
   {
@@ -475,9 +591,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "- "
-   ]
+   "source": []
   }
  ],
  "metadata": {
