Continued analysing missing values

--- a/titanic_eda.ipynb
+++ b/titanic_eda.ipynb
@@ -15,7 +15,7 @@
     "- <u>Measures of spread:</u> variance, standard deviation, skewness, kurtosis\n",
     "- <u>Distributions:</u> distributions of the data, quantiles, histograms, probability distributions.\n",
     "- <u>Analysis of outliers:</u> anomalies, incorrect data.\n",
-    "- Relationship between variables: linear relationships, non-linear relationships, correlation\n",
+    "- <u>Relationship between variables:</u> linear relationships, non-linear relationships, correlation\n",
     "-\n",
     "-\n",
     "-"
@@ -23,17 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +291,7 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -314,18 +315,21 @@
      "output_type": "stream",
      "text": [
       "Number of rows: 891\n",
-      "Number of columns:11\n"
+      "Number of columns: 11\n",
+      "Total cells: 9801\n"
      ]
     }
    ],
    "source": [
+    "df.columns = [c.lower() for c in df.columns]\n",
     "nrows, ncols = df.shape\n",
-    "print(\"Number of rows: {}\\nNumber of columns:{}\".format(nrows,ncols))"
+    "total_cells = nrows*ncols\n",
+    "print(\"Number of rows: {}\\nNumber of columns: {}\\nTotal cells: {}\".format(nrows,ncols,total_cells))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -337,17 +341,17 @@
       "Data columns (total 11 columns):\n",
       " #   Column    Non-Null Count  Dtype  \n",
       "---  ------    --------------  -----  \n",
-      " 0   Survived  891 non-null    int64  \n",
-      " 1   Pclass    891 non-null    int64  \n",
-      " 2   Name      891 non-null    object \n",
-      " 3   Sex       891 non-null    object \n",
-      " 4   Age       714 non-null    float64\n",
-      " 5   SibSp     891 non-null    int64  \n",
-      " 6   Parch     891 non-null    int64  \n",
-      " 7   Ticket    891 non-null    object \n",
-      " 8   Fare      891 non-null    float64\n",
-      " 9   Cabin     204 non-null    object \n",
-      " 10  Embarked  889 non-null    object \n",
+      " 0   survived  891 non-null    int64  \n",
+      " 1   pclass    891 non-null    int64  \n",
+      " 2   name      891 non-null    object \n",
+      " 3   sex       891 non-null    object \n",
+      " 4   age       714 non-null    float64\n",
+      " 5   sibsp     891 non-null    int64  \n",
+      " 6   parch     891 non-null    int64  \n",
+      " 7   ticket    891 non-null    object \n",
+      " 8   fare      891 non-null    float64\n",
+      " 9   cabin     204 non-null    object \n",
+      " 10  embarked  889 non-null    object \n",
       "dtypes: float64(2), int64(4), object(5)\n",
       "memory usage: 83.5+ KB\n"
      ]
@@ -368,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -392,11 +396,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>ticket</th>\n",
+       "      <th>cabin</th>\n",
+       "      <th>embarked</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -418,9 +422,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Lester, Mr. James</td>\n",
+       "      <td>Marechal, Mr. Pierre</td>\n",
        "      <td>male</td>\n",
-       "      <td>347082</td>\n",
+       "      <td>1601</td>\n",
        "      <td>C23 C25 C27</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
@@ -437,14 +441,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Name   Sex  Ticket        Cabin Embarked\n",
-       "count                 891   891     891          204      889\n",
-       "unique                891     2     681          147        3\n",
-       "top     Lester, Mr. James  male  347082  C23 C25 C27        S\n",
-       "freq                    1   577       7            4      644"
+       "                        name   sex ticket        cabin embarked\n",
+       "count                    891   891    891          204      889\n",
+       "unique                   891     2    681          147        3\n",
+       "top     Marechal, Mr. Pierre  male   1601  C23 C25 C27        S\n",
+       "freq                       1   577      7            4      644"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,32 +492,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis of missing values"
+    "## Analysis of missing values\n",
+    "The analysis of missing values allows one to understand the quality of the dataset, the impact of the missing values on the rest of the data, and might reveal hidden patterns in the data. For example, in income distribution surveys, it might reveal that missing values are more frequent in higher incomes. Which if not taken into account, could cause incorrect conclusions.\n",
+    "\n",
+    "- Missing values\n",
+    "- Percentage of missing values\n",
+    "- Columns with missing values\n",
+    "- Percentage of columns with missing values\n",
+    "- Number of rows with missing values\n",
+    "- Percentage of rows with missing values\n",
+    "- Average missing values per column\n",
+    "- Standard deviation of missing values per column\n",
+    "- Average missing values per row\n",
+    "- Standard deviation of missing values per row\n",
+    "- Bar chart of missing values\n",
+    "- Spectrum of missing values\n",
+    "- Heat map of missing values\n",
+    "- Impact of missing values in an specific column over the rest of the dataset\n",
+    "- Impact of missing values in one column on another column: probability density function, cumulative distribution function, histogram and box plot."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Survived      0\n",
-       "Pclass        0\n",
-       "Name          0\n",
-       "Sex           0\n",
-       "Age         177\n",
-       "SibSp         0\n",
-       "Parch         0\n",
-       "Ticket        0\n",
-       "Fare          0\n",
-       "Cabin       687\n",
-       "Embarked      2\n",
+       "survived      0\n",
+       "pclass        0\n",
+       "name          0\n",
+       "sex           0\n",
+       "age         177\n",
+       "sibsp         0\n",
+       "parch         0\n",
+       "ticket        0\n",
+       "fare          0\n",
+       "cabin       687\n",
+       "embarked      2\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,27 +546,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Survived     0.000000\n",
-       "Pclass       0.000000\n",
-       "Name         0.000000\n",
-       "Sex          0.000000\n",
-       "Age         19.865320\n",
-       "SibSp        0.000000\n",
-       "Parch        0.000000\n",
-       "Ticket       0.000000\n",
-       "Fare         0.000000\n",
-       "Cabin       77.104377\n",
-       "Embarked     0.224467\n",
+       "survived     0.000000\n",
+       "pclass       0.000000\n",
+       "name         0.000000\n",
+       "sex          0.000000\n",
+       "age         19.865320\n",
+       "sibsp        0.000000\n",
+       "parch        0.000000\n",
+       "ticket       0.000000\n",
+       "fare         0.000000\n",
+       "cabin       77.104377\n",
+       "embarked     0.224467\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,6 +605,71 @@
     "</table>\n",
     "\n",
     "Why are there missing values in those features? There are only two missing values in the Embarked features, maybe stowaways?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total values missing: 866/9801\n",
+      "Percentage of total values missing: 8.84%\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_values_missing = missing_values.sum()\n",
+    "total_values_missing_percentage = round(100*total_values_missing/total_cells,2)\n",
+    "\n",
+    "print(\"Total values missing: {}/{}\\nPercentage of total values missing: {}%\"\\\n",
+    "      .format(total_values_missing, total_cells, total_values_missing_percentage))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows with missing values: 708/891\n",
+      "Percentage of rows with missing values: 79.46%\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows_with_missing_values = df.isnull().any(axis=1).sum()\n",
+    "missing_rows_percentage = round(100*rows_with_missing_values/nrows,2)\n",
+    "print(\"Rows with missing values: {}/{}\\nPercentage of rows with missing values: {}%\"\\\n",
+    "     .format(rows_with_missing_values, nrows, missing_rows_percentage))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of missing values per row: 0.97\n",
+      "Standard devation of missing values per row: 0.62\n"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"values_missing\"] = df.isnull().sum(axis=1)\n",
+    "avg_number_of_missing_values_per_row = df[\"values_missing\"].mean().round(2)\n",
+    "std_missing_values_per_row = df[\"values_missing\"].std().round(2)\n",
+    "print(\"Average number of missing values per row: {}\\nStandard devation of missing values per row: {}\"\n",
+    "      .format(avg_number_of_missing_values_per_row,std_missing_values_per_row))"
    ]
   },
   {
